--- a/src/components/CurrencyList.css
+++ b/src/components/CurrencyList.css
@@ -4,10 +4,8 @@
 .currency-card-list {
   margin-top: 3.2rem;
   display: grid;
-  grid-template-columns: repeat(5, 1fr);
-  /* display: flex;
-  flex-wrap: wrap; */
-  gap: 2.4rem;
+  grid-template-columns: repeat(auto-fit, 200px);
+  grid-gap: 2.4rem;
 }
 .clear-btn {
   margin-top: 2.4rem;
@@ -24,15 +22,8 @@
   color: #fff;
 }
 /* Media Queries */
-@media (max-width: 1280px) {
+@media (max-width: 700px) {
   .currency-card-list {
-    grid-template-columns: repeat(4, 1fr);
-    gap: 2.4rem;
-  }
-}
-@media (max-width: 800px) {
-  .currency-card-list {
-    grid-template-columns: repeat(2, 1fr);
-    gap: 2.4rem;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   }
 }
